<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2010 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<preference-headers
        xmlns:android="http://schemas.android.com/apk/res/android">
  
   
    <!-- BACKUP AND RESTORE -->
    <header android:title="@string/backup_restore_label" />
    <header android:title="@string/backup_restore"
        	android:id="@+id/backup_settings"
        	android:fragment="com.junk.settings.CustomBackupRestore"
        	/>

 
    <!-- COLORS -->
    <header android:title="@string/colors_label" />
    <header android:title="@string/quick_colors"
        	android:id="@+id/quick_colors"
        	android:fragment="com.junk.settings.CustomQuickColorSettings"
        	/>
    <header android:title="@string/group_colors"
        	android:id="@+id/backup_settings"
        	android:fragment="com.junk.settings.CustomColorGroups"
        	/>
        	 
     
    <!-- THEMES -->
    <header android:title="@string/themes_label" />
        <header 
    	    android:title="@string/theme_settings"
        	android:id="@+id/theme_settings"
        	android:fragment="com.junk.settings.CustomThemeSettings"
        	 />
    
    <!-- NOTIFICATION  SETTINGS -->
    <header android:title="@string/notifications_label" />
    	<header 
    	    android:title="@string/quiet_time_main_settings" 
        	android:id="@+id/qt_main_settings"
        	android:fragment="com.junk.settings.CustomQuietTimeMainSettings"
	        />
    <header android:title="@string/led_settings"
        	android:id="@+id/led_settings"
        	android:fragment="com.junk.settings.CustomLedSettings"
	         />    
    
    <!-- STATUSBAR -->
    <header android:title="@string/statusbar_label" />   
    	
    	<!-- Clock -->
    	<header 
    	    android:title="@string/clock_settings"
        	android:id="@+id/clock_settings"
        	android:fragment="com.junk.settings.CustomClockSettings"
        	 />
    
    	<!-- Battery -->
    	<header 
    	    android:title="@string/battery_icon_settings"
           	android:id="@+id/battery_icon_settings"
        	android:fragment="com.junk.settings.CustomBatteryIconSettings"
        	/>

    	<header android:title="@string/battery_settings"   
           	android:id="@+id/battery_settings"
        	android:fragment="com.junk.settings.CustomBatterySettings"
        	/>
    		
    	<!-- Charging -->    	
    	<header android:title="@string/charging_settings"
           	android:id="@+id/charging_settings"
        	android:fragment="com.junk.settings.CustomChargeSettings"
        	/>
    
    <!-- STATUSBAR PULLDOWN -->
    <header android:title="@string/statusbar_pulldown_label" />       
    	<!-- Pulldown -->    	
    	<header android:title="@string/pulldown_settings"
           	android:id="@+id/pulldown_settings"
        	android:fragment="com.junk.settings.CustomPulldownSettings"
        	/>
    

    	<!-- Toggles -->    	
    	<header android:title="@string/toggle_settings"
           	android:id="@+id/toggle_settings"
        	android:fragment="com.junk.settings.CustomToggleSettings"
        	/>
    
    		
    	<!-- Navigation Bar -->    	
    	<header android:title="@string/navbar_settings"
           	android:id="@+id/navbar_settings"
        	android:fragment="com.junk.settings.CustomNavBarSettings"
        	/>
        

</preference-headers>
